To support `yarn berry` which had banned `npm prepare` script, I'd changed setup wizard of `nestia` to define `npm postinstall` script instead.
By the way, unlike the `npm prepare` script which works on only in the local drive and does not work when be installed from remote `npm`, `npm postinstall` script is working even when installing from the remote `npm`. Therefore, when publishing an `npm` module which has installed `tyipa` through setup wizard, it enforces users of derived libraries to run the `npm postinstall` command that requires `ts-patch` module.

To fix this crazy bug, I've decided to ban `yarn berry` on the setup wizard. From now on, when you run the `npx nestia setup` command, it will print a text that "yarn berry is not supported". If you still want to utilize the `yarn berry`, configure it manually by yourself please.

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -36,6 +36,7 @@ pnpm nestia setup --manager pnpm
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
+# YARN BERRY IS NOT SUPPORTED
 yarn add -D nestia
 yarn nestia setup --manager yarn
 ```
@@ -283,7 +284,7 @@ Also, never forget to configure `strict` (or `strictNullChecks`) as `true`. It i
 ```json filename="package.json" showLineNumbers copy
 {
     "scripts": {
-        "postinstall": "ts-patch install"
+        "prepare": "ts-patch install"
     }
 }
 ```
@@ -291,24 +292,24 @@ Also, never forget to configure `strict` (or `strictNullChecks`) as `true`. It i
 <Tabs items={['npm', 'pnpm', 'yarn']}>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-npm run postinstall
+npm run prepare
 ```
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-pnpm run postinstall
+pnpm run prepare
 ```
     </Tab>
     <Tab>
 ```bash filename="Terminal" copy showLineNumbers
-yarn run postinstall
+yarn run prepare
 ```
     </Tab>
 </Tabs>
 
-At last, configure `npm run postinstall` command like above. 
+At last, configure `npm run prepare` command like above. 
 
-Of course, you've to run the `npm run postinstall` command after configuration.
+Of course, you've to run the `npm run prepare` command after configuration.
 
 For reference, [`ts-patch`](https://github.com/nonara/ts-patch) is an helper library of TypeScript compiler that supporting custom transformations by plugins. With the [`ts-patch`](https://github.com/nonara/ts-patch) setup and plugin configurations, whenever you run `tsc` command, your `@nestia/core` decorator function call statements would be transformed to the optimal operation codes in the compiled JavaScript files.
 
